<resources>
    <string name="app_name">HiFam</string>

    <!-- General -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saludoUsuarioPersonalizado">¡Hey, %1$s!</string>
    <string name="saludoUsuario">¡Hey, Usuario!</string>
    <string name="tituloGrupos">Mis Familias</string>
    <string name="nuevaFamilia">Nueva Familia</string>
    <string name="nuevoAlbum">Nuevo Álbum</string>
    <string name="nuevaPublicacion">Nueva Publicación</string>

    <!-- Login -->
    <string name="btnLogin">Iniciar Sesión</string>
    <string name="descripcionGrupo">Familia</string>
    <string name="tituloComentarios">Comentarios</string>
    <string name="tituloGrupo">Titulo de la familia</string>
    <string name="tituloAlbum">Titulo del album</string>

    <!--    Drawer Layout-->
    <string name="miInfo">Mi Informacion</string>
    <string name="crearGrupo">Crear nueva familia</string>
    <string name="ingresarEnGrupo">Ingresar en familia existente</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="drawerAbierto">Cajón de opciones abierto</string>
    <string name="drawerCerrado">Cajón de opciones cerrado</string>

    <string name="nuevaPublicacionAlbum">Álbum: Titulo álbum</string>
    <string name="tituloAlbumFormularioPublicacion">Álbum: %1$s</string>
    <string name="nuevaPublicacionTitulo">Escribe aquí un título</string>
    <string name="nuevaPublicacionTexto">Añade aquí un poco de texto</string>

    <string name="nuevaFamiliaTitulo">Escribe aquí un título*</string>
    <string name="nuevaFamiliaDescripcion">Escribe aquí una descripción</string>
    <string name="miembrosFamilia">Miembros de la familia</string>
    <string name="nuevaFamiliaAnyadirUsuario">Añade un nombre de usuario</string>
    <string name="nuevaFamiliaDatos">Datos generales:</string>
    <string name="nuevaFamiliaMiembros">Miembros de la familia:</string>
    <string name="usuariosVacios">"No se han agregado usuarios a la familia."</string>

    <string name="nombreUsuario">"@Usuario"</string>

    <!-- Menú añadir grupo -->
    <string name="crearNuevoGrupo">Crear nueva familia</string>
    <string name="ingresarEnGrupoExistente">Ingresar en familia existente</string>

    <!-- Modal ingreso en grupo -->
    <string name="solicitarIngresoEnGrupo">Ingresa un código de familia para mandar una solicitud.</string>
    <string name="botonEnviarSolicitud">Enviar solicitud</string>
    <string name="campoCodigoDeGrupo">Escribe aquí tu código</string>

    <!-- Modal nuevo comentario -->
    <string name="textoNuevoComentario">Nuevo comentario</string>
    <string name="placeholderNuevoComentario">Escribe algo bonito...</string>
    <string name="botonNuevoComentario">Enviar</string>

    <!-- Grupos recuperables -->
    <string name="tituloGruposRecuperables">Familas Eliminadas</string>
    <string name="descripcionGruposRecuperables">Aquí podrás ver tus familias eliminadas.</string>

    <!-- Albumes recuperables -->
    <string name="tituloAlbumesRecuperables">Álbumes Eliminados</string>
    <string name="descripcionAlbumesRecuperables">Aquí podrás ver tus álbumes eliminados.</string>

    <!--Texto alternativo-->
    <string name="textoAlternativo">No hay nada por aquí.</string>

    <!-- Botones de modales -->
    <string name="btnRecuperar">Recuperar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnConfirmar">Confirmar</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="btnAbandonar">Abandonar</string>


    <!-- Items menús contextuales -->
    <string name="verDetallesGrupo">Detalles de la Familia</string>
    <string name="verIntegrantes">Integrantes de la Familia</string>
    <string name="verAlbumesEliminados">Álbumes Eliminados</string>
    <string name="eliminarGrupo">Eliminar Familia</string>
    <string name="eliminarAlbum">Eliminar Álbum</string>
    <string name="recuperarGrupo">Recuperar familia</string>
    <string name="recuperarAlbum">Recuperar álbum</string>
    <string name="verDetallesAlbum">Detalles del Álbum</string>
    <string name="verAlbum">Ver Álbum</string>
    <string name="verGrupo">Ver Grupo</string>
    <string name="eliminarPublicacion">Eliminar Publicación</string>
    <string name="modificarPublicacion">Modificar Publicación</string>

    <!-- Formulario nuevo álbum -->
    <string name="grupoAlbum">Familia: tituloFamilia</string>
    <string name="nuevoAlbumTitulo">Escribe aquí un título*</string>
    <string name="nuevoAlbumDescripcion">Escribe aquí una descripción</string>
    <string name="tipoAlbum">Tipo de Álbum:</string>
    <string name="warningAlbum">Serás admin de este álbum.</string>
    <string name="radioButtonAlbumIndividual">Álbum individual</string>
    <string name="radioButtonAlbumColectivo">Álbum colectivo</string>
    <string name="tituloGrupoFormularioAlbum">Familia: %1$s</string>

    <!-- Modal solicitudes de entrada a grupo -->
    <string name="solicitudesEntradaInfo">Aquí se mostrarán las solicitudes de entrada a tu familia.</string>
    <string name="solicitudesEntradaGrupo">Solicitudes de entrada</string>
    <string name="headerUsuariosSolicitudes">Usuarios:</string>

    <!-- Login fragment -->
    <string name="login">Inicio de Sesión</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenya">Contraseña</string>
    <string name="eslogan">Where love knows no distance</string>
    <string name="placeholderUsuarioLogin">Usuario o correo electrónico</string>
    <string name="placeholderContrasenyaLogin">Contraseña</string>
    <string name="linkRegistro">¿No tienes cuenta? Registrate aquí.</string>
    <string name="btnIniciarSesion">Iniciar Sesión</string>

    <!-- Registro fragment -->
    <string name="registro">Registro</string>
    <string name="nombre">Nombre completo*</string>
    <string name="usuarioRegistro">Usuario*</string>
    <string name="contrasenyaRegistro">Contraseña*</string>
    <string name="correoElectronico">Correo electrónico*</string>
    <string name="nombrePlaceholder">Tu nombre</string>
    <string name="contrasenyaPlaceholder">Tu contraseña</string>
    <string name="usuarioRegistroPlaceholder">Tu nombre de usuario</string>
    <string name="correoElectronicoPlaceholder">Tu correo electrónico</string>
    <string name="telefono">Teléfono*</string>
    <string name="telefonoPlaceholder">Tu teléfono</string>
    <string name="fechaNacimiento">Fecha de nacimiento*</string>
    <string name="fechaNacimientoPlaceholder">Tu fecha de nacimiento</string>
    <string name="linkInicioSesion">¿Ya tienes cuenta? Inicia sesión.</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="btnRegistro">Registrarme</string>
    <string name="prefijoTelefonoPlaceholder">Prefijo</string>
    <string name="prefijoPorDefecto">34</string>
    <string name="requisitosContrasenya">
        Longitud mínima de 8 caracteres.\n
        Al menos una letra mayúscula.\n
        Al menos una letra minúscula.\n
        Al menos un dígito.\n
        Al menos un carácter especial (@, #, $, %, etc.).
    </string>


    <!-- Detalles Grupo Fragment -->
    <string name="detallesGrupo">Detalles de la familia</string>

    <!-- TabLayout -->
    <string name="tabDetalles">Información</string>
    <string name="tabMiembros">Miembros</string>

    <!-- Tab Detalles Grupo Fragment -->
    <string name="codigoGrupo">Código:</string>
    <string name="fechaCreacionGrupo">Creación:</string>
    <string name="adminGrupo">Admin:</string>


    <!-- Tab Detalles Usuario Fragment -->
    <string name="nombreCompletoUsuario">Nombre completo:</string>
    <string name="usuarioUsuario">Usuario:</string>
    <string name="telefonoUsuario">Teléfono:</string>
    <string name="fechaNacimientoUsuario">Nacimiento:</string>
    <string name="emailUsuario">Correo electrónico:</string>
    <string name="contrasenyaUsuario">Contraseña:</string>
    <string name="botonModificarContrasenya">Modificar contraseña</string>
    <string name="botonEliminarUsuario">Eliminar usuario</string>
    <string name="usuarioPlaceholder">Tu usuario</string>
    <string name="nacimientoPlaceholder">dd/MM/yyyy</string>

    <!-- Tab Grupos Usuario Fragment -->
    <string name="botonIngresarEnGrupo">Ingresar en familia</string>
    <string name="misGruposTitulo">Familias:</string>

    <!-- Usuario fragment -->
    <string name="misGrupos">Mis familias</string>
    <string name="miInformacion">Mi información</string>

    <!-- Fragment modificar contrasenya -->
    <string name="cambiarContrasenya">Nueva Contraseña</string>
    <string name="placeholderCambiarContrasenya">Escribe una contraseña</string>

</resources>