<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.mariana.androidhifam.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="15dp"
        android:paddingBottom="80dp"
        android:paddingStart="45dp"
        android:paddingEnd="45dp">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/logohifam"
            app:layout_constraintDimensionRatio="H,12:7"
            android:layout_marginBottom="-10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/login"
            app:layout_constraintBottom_toBottomOf="@id/eslogan"/>

        <TextView
            android:id="@+id/eslogan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:textSize="20sp"
            android:text="@string/eslogan"
            android:gravity="center"
            android:layout_marginTop="-15dp"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintTop_toBottomOf="@id/logo"/>

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:layout_marginTop="20dp"
            android:textSize="22sp"
            android:text="@string/login"
            android:gravity="center"
            android:textColor="@color/orange"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintTop_toBottomOf="@id/eslogan"
            app:layout_constraintBottom_toTopOf="@id/formulario"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/formulario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintTop_toBottomOf="@id/login"
            app:layout_constraintBottom_toTopOf="@id/btnLogin">
        <TextView
            android:id="@+id/usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:text="@string/usuario"
            android:textColor="@color/darkGrey"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/editextUsuario"/>

        <EditText
            android:id="@+id/editextUsuario"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:maxLength="30"
            android:gravity="center_vertical"
            android:fontFamily="@font/nunito_bold"
            android:textSize="16sp"
            android:textColor="@color/darkGrey"
            android:hint="@string/placeholderUsuarioLogin"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/usuario"
            android:background="@drawable/contorno_gris"
            app:layout_constraintVertical_weight="1"/>

        <TextView
            android:id="@+id/contrasenya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:text="@string/contrasenya"
            android:layout_marginTop="25dp"
            android:textColor="@color/darkGrey"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintTop_toBottomOf="@id/editextUsuario"
            app:layout_constraintBottom_toTopOf="@id/editextContrasenya"/>

        <EditText
            android:id="@+id/editextContrasenya"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:maxLength="30"
            android:gravity="center_vertical"
            android:fontFamily="@font/nunito_bold"
            android:textSize="16sp"
            android:textColor="@color/darkGrey"
            android:hint="@string/placeholderContrasenyaLogin"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/contrasenya"
            android:background="@drawable/contorno_gris"
            app:layout_constraintVertical_weight="1"/>

        <ImageView
            android:id="@+id/botonMostrarContrasenya"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/eyeoff"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toTopOf="@id/editextContrasenya"
            app:layout_constraintBottom_toBottomOf="@id/editextContrasenya"
            app:layout_constraintEnd_toEndOf="@id/editextContrasenya"
            app:layout_constraintDimensionRatio="W,1:1"/>

        <TextView
            android:id="@+id/linkRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:textSize="14sp"
            android:text="@string/linkRegistro"
            android:layout_marginTop="6dp"
            android:textColor="@color/mediumGrey"
            android:gravity="center"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintTop_toBottomOf="@id/editextContrasenya"
            app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnLogin"
            android:textColor="@color/eggWhite"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/formulario"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>