<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SegundaPaginaRegistroFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/fechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:text="@string/fechaNacimiento"
            android:textColor="@color/darkGrey"
            android:layout_marginTop="15dp"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/editextFechaNacimiento"/>

        <TextView
            android:id="@+id/editextFechaNacimiento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:maxLength="30"
            android:gravity="center_vertical"
            android:fontFamily="@font/nunito_bold"
            android:textSize="16sp"
            android:textColor="@color/darkGrey"
            android:hint="@string/fechaNacimientoPlaceholder"
            app:layout_constraintTop_toBottomOf="@id/fechaNacimiento"
            app:layout_constraintBottom_toTopOf="@id/contrasenya"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/botonCalendario"
            android:background="@drawable/contorno_gris_medio"
            app:layout_constraintVertical_weight="1"/>

        <ImageView
            android:id="@+id/botonCalendario"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/calendarorange"
            app:layout_constraintTop_toTopOf="@id/editextFechaNacimiento"
            app:layout_constraintBottom_toBottomOf="@id/editextFechaNacimiento"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="W,1:1"/>

        <TextView
            android:id="@+id/contrasenya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:text="@string/contrasenyaRegistro"
            android:textColor="@color/darkGrey"
            android:layout_marginTop="15dp"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintTop_toBottomOf="@id/editextFechaNacimiento"
            app:layout_constraintBottom_toTopOf="@id/editextContrasenya"/>

        <EditText
            android:id="@+id/editextContrasenya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLength="30"
            android:gravity="center_vertical"
            android:fontFamily="@font/nunito_bold"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:textColor="@color/darkGrey"
            android:hint="@string/contrasenyaPlaceholder"
            app:layout_constraintTop_toBottomOf="@id/contrasenya"
            android:background="@drawable/contorno_gris"
            app:layout_constraintVertical_weight="1"/>

        <ImageView
            android:id="@+id/botonMostrarContrasenya"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/eyeoff"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toTopOf="@id/editextContrasenya"
            app:layout_constraintBottom_toBottomOf="@id/editextContrasenya"
            app:layout_constraintEnd_toEndOf="@id/editextContrasenya"
            app:layout_constraintDimensionRatio="W,1:1"/>

        <TextView
            android:id="@+id/requisitosContrasenya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:textSize="16sp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/requisitosContrasenya"
            android:textColor="@color/mediumGrey"
            android:layout_marginTop="15dp"
            android:visibility="invisible"
            android:background="@drawable/base_comentario"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintTop_toBottomOf="@id/editextContrasenya"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>